Aligned the game board to fix the overlap

--- a/src/App.css
+++ b/src/App.css
@@ -235,16 +235,18 @@
 }
 
 .main-dashboard-logo {
-    width: 250px;
+    width: 260px;
 }
 
 .main-dashboard-center-content {
     margin: 0.5rem 0;
     border: 0.1rem solid azure;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     text-align: center;
-    min-height: 94vh;
-    min-width: 700px;
+    min-height: 805px;
+    max-height: 805px;
+    min-width: 805px;
+    max-width: 805px;
 }
 
 .main-dashboard-right-content {
@@ -265,8 +267,10 @@
     flex-direction: row;
     justify-content: start;
     flex-wrap: wrap;
-    width: 800px;
-    height: 800px;
+    min-height: 800px;
+    max-height: 800px;
+    min-width: 800px;
+    max-width: 800px;
 }
 .room-unit {
     padding: 0;
